# src/docs/swagger.yaml
@@ -18,6 +18,7 @@ tags:
     -   name: Transaction
     -   name: Service
     -   name: Conversion Rate
+    -   name: Admin - Manage Category
     -   name: Admin - Manage User
     -   name: Admin - Manage Property
     -   name: Admin - Manage Transaction
@@ -5079,6 +5080,401 @@ paths:
                                             message:
                                                 type: string
                                                 example: User not found!
+            security:
+                - bearerAuth: []
+    /admin/manage-category:
+        get:
+            tags:
+                - Admin - Manage Category
+            summary: Get all categories by ADMIN (NEW 07/03)
+            description: Get all categories
+            operationId: getAllCategoriesByAdmin
+            responses:
+                '200':
+                    description: Get all categories successfully!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: number
+                                        example: 200
+                                    message:
+                                        type: string
+                                        example: Get all categories successfully!
+                                    metaData:
+                                        type: array
+                                        items:
+                                            type: object
+                                            properties:
+                                                categoryId:
+                                                    type: number
+                                                    example: 1
+                                                name:
+                                                    type: string
+                                                    example: Apartment
+                '400':
+                    description: Failed to get all categories!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 400
+                                            message:
+                                                type: string
+                                                example: Failed to get all categories!
+                '401':
+                    description: Unauthorized!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 401
+                                            message:
+                                                type: string
+                                                enum:
+                                                    -   Please Authenticate!
+                                                    -   Invalid accessToken!
+                                                    -   Please verify your email!
+                                                    -   Permission denied!
+                '403':
+                    description: Your account is not active!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 403
+                                            message:
+                                                type: string
+                                                example: Your account is not active!
+            security:
+                - bearerAuth: []
+        post:
+            tags:
+                - Admin - Manage Category
+            summary: Create new category by ADMIN (NEW 07/03)
+            description: Create new category
+            operationId: createNewCategoryByAdmin
+            requestBody:
+                content:
+                  application/json:
+                    schema:
+                        type: object
+                        properties:
+                            categoryName:
+                                type: string
+                                example: Villa
+                        required:
+                          - "categoryName"
+            responses:
+                '201':
+                    description: Create new category successfully!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: number
+                                        example: 201
+                                    message:
+                                        type: string
+                                        example: Create new category successfully!
+                                    metaData:
+                                        type: object
+                                        example: {}
+                '400':
+                    description: Failed to create new category!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 400
+                                            message:
+                                                type: string
+                                                enum:
+                                                    -   Category already exists!
+                                                    -   categoryName is required!
+                                                    -   Failed to create new category!
+                '401':
+                    description: Unauthorized!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 401
+                                            message:
+                                                type: string
+                                                enum:
+                                                    -   Please Authenticate!
+                                                    -   Invalid accessToken!
+                                                    -   Please verify your email!
+                                                    -   Permission denied!
+                '403':
+                    description: Your account is not active!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 403
+                                            message:
+                                                type: string
+                                                example: Your account is not active!
+            security:
+                - bearerAuth: []
+    /admin/manage-category/{categoryId}:
+        patch:
+            tags:
+                - Admin - Manage Category
+            summary: Update category by ADMIN (NEW 07/03)
+            description: Update category by Id
+            operationId: updateCategoryByAdmin
+            parameters:
+                -   name: categoryId
+                    in: path
+                    description: Id of category to update
+                    required: true
+                    schema:
+                        type: number
+                        example: 5
+            requestBody:
+                content:
+                  application/json:
+                    schema:
+                        type: object
+                        properties:
+                            categoryName:
+                                type: string
+                                example: Apartment
+                        required:
+                          - "categoryName"
+            responses:
+                '200':
+                    description: Update category successfully!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: number
+                                        example: 200
+                                    message:
+                                        type: string
+                                        example: Update category successfully!
+                                    metaData:
+                                        type: object
+                                        example: {}
+                '400':
+                    description: Failed to update category!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 400
+                                            message:
+                                                type: string
+                                                enum:
+                                                    -   Category already exists!
+                                                    -   categoryName is required!
+                                                    -   Failed to update category!
+                '401':
+                    description: Unauthorized!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 401
+                                            message:
+                                                type: string
+                                                enum:
+                                                    -   Please Authenticate!
+                                                    -   Invalid accessToken!
+                                                    -   Please verify your email!
+                                                    -   Permission denied!
+                '403':
+                    description: Your account is not active!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 403
+                                            message:
+                                                type: string
+                                                example: Your account is not active!
+                '404':
+                    description: Category not found!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 404
+                                            message:
+                                                type: string
+                                                example: Category not found!
+            security:
+                - bearerAuth: []
+        delete:
+            tags:
+                - Admin - Manage Category
+            summary: Delete category by ADMIN (NEW 07/03)
+            description: Delete a category by Id
+            operationId: deleteCategoryByAdmin
+            parameters:
+                -   name: categoryId
+                    in: path
+                    description: Id of category to delete
+                    required: true
+                    schema:
+                        type: number
+                        example: 6
+            responses:
+                '200':
+                    description: Delete category successfully!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: number
+                                        example: 200
+                                    message:
+                                        type: string
+                                        example: Delete category successfully!
+                                    metaData:
+                                        type: object
+                                        example: {}
+                '400':
+                    description: Failed to delete category!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 400
+                                            message:
+                                                type: string
+                                                enum:
+                                                    -   Failed to delete category!
+                '401':
+                    description: Unauthorized!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 401
+                                            message:
+                                                type: string
+                                                enum:
+                                                    -   Please Authenticate!
+                                                    -   Invalid accessToken!
+                                                    -   Please verify your email!
+                                                    -   Permission denied!
+                '403':
+                    description: Your account is not active!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 403
+                                            message:
+                                                type: string
+                                                example: Your account is not active!
+                '404':
+                    description: Category not found!
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            status:
+                                                type: number
+                                                example: 404
+                                            message:
+                                                type: string
+                                                example: Category not found!
             security:
                 - bearerAuth: []
 components:
